# gift-idea-tracker

gift-ideas/: app.py  pyproject.toml
gift-ideas/templates/: add_person.html  edit_list.html  edit_person.html  home.html  layout.html  name.html  search.html
