[project]
name = "gift-ideas"
version = "0.1.0"
description = ""
authors = [
    {name = "c-lamar-fullmer",email = "colton.lamar.fullmer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
